[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pt-checkin"
version = "0.2.0"
description = "PT站点自动签到工具 - 独立版本，移除FlexGet依赖"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "wuyaos"}
]
maintainers = [
    {name = "wuyaos"}
]
keywords = ["pt", "checkin", "signin", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Archiving",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "loguru>=0.6.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.11.0",
    "schedule>=1.2.0",
    "click>=8.1.0",
    "Pillow>=9.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.12.0",
    "chardet>=5.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/wuyaos/pt-checkin"
Repository = "https://github.com/wuyaos/pt-checkin"
Issues = "https://github.com/wuyaos/pt-checkin/issues"
Documentation = "https://github.com/wuyaos/pt-checkin/blob/main/README.md"

[project.scripts]
pt-checkin = "pt_checkin.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pt_checkin*"]

[tool.setuptools.package-data]
"pt_checkin" = ["*.yml", "*.yaml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pt_checkin"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=pt_checkin",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
